# SymCrypt-OpenSSL

./: .gitignore  CMakeLists.txt  DEBUG_SYMBOLS.md  DIAGRAMS.md  KEYSINUSE_ENV_VAR_DESIGN.md  NOTICE  README.md  SymCrypt-OpenSSL.code-workspace  build_debug.sh  changes.md  debug_nginx_provider.sh  gdb_provider_commands.txt  keysinuse.c  test_fork_env  test_fork_env.c  test_keysinuse_nginx.sh
EvpTestRecipes/: README.md  evpciph_aes_common.txt  evpmac_common.txt  evppkey_ffdhe.txt  evppkey_rsa.txt  evppkey_rsa_common.txt
EvpTestRecipes/1.1.1/: evpciph.txt  evpfocus.txt  evpkdf.txt  evppkey.txt
EvpTestRecipes/3/: cmp  evpciph_aes_common.txt  evpkdf_kbkdf_counter.txt  evpkdf_ssh.txt  evppkey_ecdh.txt  evptest_focus.txt
EvpTestRecipes/3.0/: evpciph_aes_engine.txt  evpkdf_kbkdf_counter.txt  evpkdf_kbkdf_kmac.txt  evpkdf_srtpkdf.txt  evpkdf_ss.txt  evpkdf_tls13_kdf.txt  evpmac_common.txt  evpmac_engine.txt  evpmd_sha.txt  evpmd_shake.txt  evppkey_brainpool.txt  evppkey_dh.txt  evppkey_ecdh.txt  evppkey_ecdsa.txt  evppkey_ecdsa_named.txt  evppkey_ecx.txt  evppkey_ml_dsa_sigver_message.txt  evppkey_rsa.txt  evppkey_rsa_common.txt  evppkey_rsa_provider.txt
EvpTestRecipes/3.0.2/: evpciph_aes_engine.txt  evpkdf_kbkdf_counter.txt  evpkdf_kbkdf_kmac.txt  evppkey_rsa.txt  evppkey_rsa_common.txt  evppkey_rsa_engine.txt
EvpTestRecipes/3.5/: evppkey_ecdsa_sigalg.txt  evppkey_ml_dsa_sigver.txt  evppkey_ml_dsa_wycheproof.txt  evppkey_rsa_sigalg.txt
KeysInUse/: CMakeLists.txt  README.md  keysinuse.c  keysinuse.h
ScosslCommon/: CMakeLists.txt
ScosslCommon/inc/: scossl_aes_aead.h  scossl_ciphers.h  scossl_common.h  scossl_dh.h  scossl_ecc.h  scossl_helpers.h  scossl_hkdf.h  scossl_hmac.h  scossl_mac.h  scossl_rsa.h  scossl_sshkdf.h  scossl_tls1prf.h
ScosslCommon/src/: scossl_aead_ciphers.c  scossl_aes_aead.c  scossl_ciphers.c  scossl_dh.c  scossl_ecc.c  scossl_helpers.c  scossl_hkdf.c  scossl_hmac.c  scossl_mac.c  scossl_rsa.c  scossl_sshkdf.c  scossl_tls1prf.c
SslPlay/: CMakeLists.txt  SslPlay.cpp
SymCryptEngine/: README.md
SymCryptEngine/dynamic/: CMakeLists.txt  OpenSSLConfig.conf
SymCryptEngine/inc/: e_scossl.h  e_symcrypt.h  sc_ossl.h  scossl.h
SymCryptEngine/src/: e_scossl.c  e_scossl_ciphers.c  e_scossl_ciphers.h  e_scossl_dh.c  e_scossl_dh.h  e_scossl_digests.c  e_scossl_digests.h  e_scossl_dsa.c  e_scossl_dsa.h  e_scossl_ecc.c  e_scossl_ecc.h  e_scossl_hkdf.c  e_scossl_hkdf.h  e_scossl_hmac.c  e_scossl_hmac.h  e_scossl_pkey_meths.c  e_scossl_pkey_meths.h  e_scossl_rand.c  e_scossl_rand.h  e_scossl_rsa.c  e_scossl_rsa.h  e_scossl_rsapss.c  e_scossl_rsapss.h  e_scossl_sshkdf.c  e_scossl_sshkdf.h  e_scossl_tls1prf.c  e_scossl_tls1prf.h  e_symcrypt.c  e_symcrypt_ciphers.c  e_symcrypt_ciphers.h  e_symcrypt_dh.c  e_symcrypt_dh.h  e_symcrypt_digests.c  e_symcrypt_digests.h  e_symcrypt_dsa.c  e_symcrypt_dsa.h  e_symcrypt_ecc.c  e_symcrypt_ecc.h  e_symcrypt_helpers.c  e_symcrypt_helpers.h  (+66 more)
SymCryptEngine/static/: CMakeLists.txt
SymCryptProvider/: CMakeLists.txt  README.md  symcrypt_prov.cnf
SymCryptProvider/inc/: p_scossl_base.h.in  scossl_prov_base.h.in  scossl_provider.h
SymCryptProvider/src/: p_scossl_aead_ciphers.c  p_scossl_aead_ciphers.h  p_scossl_base.c  p_scossl_bio.c  p_scossl_bio.h  p_scossl_ciphers.c  p_scossl_ciphers.h  p_scossl_digests.c  p_scossl_digests.h  p_scossl_dispatch.h  p_scossl_ecc.c  p_scossl_ecc.h  p_scossl_kdfs.h  p_scossl_keyexch.h  p_scossl_keymgmt.h  p_scossl_keysinuse.c  p_scossl_keysinuse.h  p_scossl_names.h  p_scossl_rand.c  p_scossl_rsa.c  p_scossl_rsa.h  p_scossl_signature.h  p_scossl_skey.h  scossl_prov_base.c  scossl_prov_cipher.h  scossl_prov_digests.c  scossl_prov_digests.h  scossl_prov_kdf.h  scossl_prov_keyexch.h  scossl_prov_keymgmt.h  scossl_prov_signature.h
SymCryptProvider/src/asymcipher/: p_scossl_rsa_cipher.c
SymCryptProvider/src/ciphers/: p_scossl_aes.c  p_scossl_aes.h  p_scossl_aes_aead.c  p_scossl_aes_aead.h  p_scossl_aes_xts.c  p_scossl_aes_xts.h
SymCryptProvider/src/decoder/: p_scossl_decode_common.c  p_scossl_decode_common.h  p_scossl_decode_mldsa.c  p_scossl_decode_mlkem.c  p_scossl_der_to_key.c
SymCryptProvider/src/digests/: p_scossl_cshake.c  p_scossl_digest_common.c  p_scossl_digest_common.h  p_scossl_digest_generic.c  p_scossl_shake.c
SymCryptProvider/src/encoder/: p_scossl_encode_common.c  p_scossl_encode_common.h  p_scossl_encode_mldsa.c  p_scossl_encode_mlkem.c
SymCryptProvider/src/kdf/: p_scossl_hkdf.c  p_scossl_hkdf.h  p_scossl_kbkdf.c  p_scossl_pbkdf2.c  p_scossl_srtpkdf.c  p_scossl_sshkdf.c  p_scossl_sskdf.c  p_scossl_tls1prf.c  p_scossl_tls1prf.h
SymCryptProvider/src/kem/: p_scossl_mlkem.c  p_scossl_mlkem.h  p_scossl_mlkem_hybrid.c  p_scossl_mlkem_hybrid.h  p_scossl_mlkem_hybrid_ecc.c  p_scossl_mlkem_hybrid_ecc.h
SymCryptProvider/src/keyexch/: p_scossl_dh.c  p_scossl_dh.h  p_scossl_ecdh.c  p_scossl_ecdh.h  p_scossl_kdf_keyexch.c
SymCryptProvider/src/keymgmt/: p_scossl_dh_keymgmt.c  p_scossl_ecc_impexp_types.h  p_scossl_ecc_keymgmt.c  p_scossl_ecc_keymgmt.h  p_scossl_kdf_keymgmt.c  p_scossl_mldsa_keymgmt.c  p_scossl_mldsa_keymgmt.h  p_scossl_mlkem_hybrid_keymgmt.c  p_scossl_mlkem_keymgmt.c  p_scossl_mlkem_keymgmt.h  p_scossl_rsa_keymgmt.c
SymCryptProvider/src/mac/: p_scossl_cmac.c  p_scossl_hmac.c  p_scossl_kmac.c  p_scossl_kmac.h
SymCryptProvider/src/rsa/: p_scossl_rsa_keymgmt.c  p_scossl_rsa_signature.c
SymCryptProvider/src/signature/: p_scossl_ecdsa_sigalg_signature.c  p_scossl_ecdsa_signature.c  p_scossl_ecdsa_signature.h  p_scossl_mldsa.c  p_scossl_mldsa.h  p_scossl_mldsa_signature.c  p_scossl_mldsa_signature.h  p_scossl_rsa_sigalg_signature.c  p_scossl_rsa_signature.c  p_scossl_rsa_signature.h
SymCryptProvider/src/skeymgmt/: p_scossl_aes_skeymgmt.c  p_scossl_generic_skeymgmt.c  p_scossl_generic_skeymgmt.h
SymcryptEngine/dynamic/: CMakeLists.txt  OpenSSLConfig.md
cmake-toolchain/: LinuxUserMode-AMD64.cmake  LinuxUserMode-ARM.cmake  LinuxUserMode-ARM64.cmake
test/: test_invariant_scossl_aes_aead.c
test/KeysInUseTest/: CMakeLists.txt  KeysInUseTest.cpp
(+14 files in other folders)
